[gd_scene load_steps=4 format=3 uid="uid://dwoicfo2rmhxr"]

[ext_resource type="Script" uid="uid://btd4nli2261er" path="res://Scripts/UI/interaction_panel.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c5shtx1ajh2sd" path="res://Scenes/UI/player_ui.tscn" id="2_vftfo"]
[ext_resource type="PackedScene" uid="uid://bqu664g0qo4y8" path="res://Scenes/UI/talk_ui.tscn" id="3_u0ni2"]

[node name="InteractionPanel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 440.0
offset_top = -300.0
offset_right = 840.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TabButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 40.0
grow_vertical = 2

[node name="PlayerTab" type="Button" parent="TabButtons"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
text = "PLR"

[node name="TalkTab" type="Button" parent="TabButtons"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
text = "TALK"

[node name="InfoTab" type="Button" parent="TabButtons"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
text = "INFO"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ContentContainer" type="Control" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PlayerContent" type="Control" parent="PanelContainer/MarginContainer/ContentContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerUI" parent="PanelContainer/MarginContainer/ContentContainer/PlayerContent" instance=ExtResource("2_vftfo")]
layout_mode = 1

[node name="TalkContent" type="Control" parent="PanelContainer/MarginContainer/ContentContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TalkUI" parent="PanelContainer/MarginContainer/ContentContainer/TalkContent" instance=ExtResource("3_u0ni2")]
layout_mode = 1

[node name="InfoContent" type="Control" parent="PanelContainer/MarginContainer/ContentContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/ContentContainer/InfoContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[b]Interaction Information[/b]

Select an object to see details."
